network.tf
// Grupo de recursos al que asociar las redes
resource "azurerm_resource_group" "rg" {
  name     = var.resource_group_name
  location = var.location
}

// Red virtual y subred
// Los parámetros se extraen de las variables globales definidas en variables.tf
resource "azurerm_virtual_network" "vnet" {
  name                = "vnet-asr-terraform"
  address_space       = var.vnet_address_space
  location            = azurerm_resource_group.rg.location
  resource_group_name = azurerm_resource_group.rg.name
}

resource "azurerm_subnet" "subnet" {
  name                 = "subnet-asr-terraform"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = var.subnet_address_space

  # Se añade porque terraform intenta cargar todo muy rapido y da error de que la red virtual todavía no existe
  depends_on = [
    azurerm_virtual_network.vnet
  ]
}
